<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.news.news.ui.bbc.HomeFragment"
        android:label="@string/Times"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.news.news.ui.aljajeera.GalleryFragment"
        android:label="@string/hindu"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.news.news.ui.cnn.SlideshowFragment"
        android:label="@string/express"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/foxNewsFragment"
        android:name="com.news.news.Fragments.foxNewsFragment"
        android:label="@string/dna"
        tools:layout="@layout/fragment_fox_news" />
    <fragment
        android:id="@+id/skyNewsFragment"
        android:name="com.news.news.Fragments.skyNewsFragment"
        android:label="@string/indiatoday"
        tools:layout="@layout/fragment_sky_news" />
</navigation>